feat(contracts,risk): contract attachments at every level + risk library + analysis-quality
Contracts (bipros-contract):
- Contract entity expanded with P6/PCM-inspired commercial fields
  (description, currency, NTP date, revisedValue, revisedCompletionDate,
  mobilisation/retention/performance-BG %, payment terms, billing cycle).
- Wired revisedValue + new fields end-to-end (DTO, service, response).
  ContractService.update now accepts contractNumber/contractorName/contractType
  with uniqueness validation. New invariants:
  INVALID_REVISED_VALUE (revisedValue >= contractValue),
  INVALID_REVISED_COMPLETION (revisedCompletionDate >= completionDate).
- New polymorphic attachment system: a single contract_attachments table
  serves all four levels (Contract, Milestone, VariationOrder, PerformanceBond)
  via entity_type + entity_id discriminators, validated in the application
  layer. Typed attachmentType (LOA, AGREEMENT, BOQ, DRAWING, BG_SCAN, MOM,
  MEASUREMENT_BOOK, TEST_REPORT, CERTIFICATE, PHOTO, OTHER). Filesystem
  storage ported from bipros-document with path-traversal guard, 50 MB cap,
  layout {root}/{projectId}/{contractId}/{entityType}/{entityId}/{attachmentId}/{file}.
- Cascade delete of attachment binaries when parent (Contract / Milestone /
  VO / Bond) is deleted. attachmentCount badge populated in milestone / VO /
  bond list responses via a single bulk count query (no N+1).
- 6 new REST paths (contract-level + per-sub-entity upload/list, plus
  shared download/delete by attachmentId), all PreAuthorize ADMIN/PM.
- Liquibase 013 rewritten to match every entity in the contract module
  (50+ missing columns + 4 missing tables). New 018 changelog for
  contract_attachments. application.yml: bipros.contract.storage block.

Frontend contracts UI:
- Shared <ContractForm> component (sectioned, ~20 fields) used by both
  the create form and the new edit-contract flow on the detail page.
- Contract-type dropdown surfaces all 12 enum values (was 6); single
  so